--- a/client/src/components/UI/SettingsContainer.module.css
+++ b/client/src/components/UI/SettingsContainer.module.css
@@ -17,8 +17,9 @@
 
 @media screen and (max-width: 768px) {
   .container {
+    width: 80%;
     margin: 0 auto;
-    width: 90%;
+    padding: 25px 0 0 0;
     margin-bottom: 50px;
   }
 }
